; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zc0301/extr_zc0301_core.c_zc0301_read_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/zc0301/extr_zc0301_core.c_zc0301_read_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zc0301_device = type { i64*, %struct.usb_device* }
%struct.usb_device = type { i32 }

@ZC0301_CTRL_TIMEOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"Failed to read a register (index 0x%04X, error %d)\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Read: index 0x%04X, value: 0x%04X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zc0301_read_reg(%struct.zc0301_device* %0, i32 %1) #0 {
  %3 = alloca %struct.zc0301_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.usb_device*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store %struct.zc0301_device* %0, %struct.zc0301_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.zc0301_device*, %struct.zc0301_device** %3, align 8
  %9 = getelementptr inbounds %struct.zc0301_device, %struct.zc0301_device* %8, i32 0, i32 1
  %10 = load %struct.usb_device*, %struct.usb_device** %9, align 8
  store %struct.usb_device* %10, %struct.usb_device** %5, align 8
  %11 = load %struct.zc0301_device*, %struct.zc0301_device** %3, align 8
  %12 = getelementptr inbounds %struct.zc0301_device, %struct.zc0301_device* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  store i64* %13, i64** %6, align 8
  %14 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %15 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %16 = call i32 @usb_rcvctrlpipe(%struct.usb_device* %15, i32 0)
  %17 = load i32, i32* %4, align 4
  %18 = load i64*, i64** %6, align 8
  %19 = load i32, i32* @ZC0301_CTRL_TIMEOUT, align 4
  %20 = call i32 @usb_control_msg(%struct.usb_device* %14, i32 %16, i32 161, i32 192, i32 1, i32 %17, i64* %18, i32 1, i32 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %2
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @DBG(i32 3, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %2
  %28 = load i32, i32* %4, align 4
  %29 = load i64*, i64** %6, align 8
  %30 = load i64, i64* %29, align 8
  %31 = trunc i64 %30 to i32
  %32 = call i32 @PDBGG(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %28, i32 %31)
  %33 = load i32, i32* %7, align 4
  %34 = icmp sge i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %27
  %36 = load i64*, i64** %6, align 8
  %37 = load i64, i64* %36, align 8
  %38 = trunc i64 %37 to i32
  br label %40

39:                                               ; preds = %27
  br label %40

40:                                               ; preds = %39, %35
  %41 = phi i32 [ %38, %35 ], [ -1, %39 ]
  ret i32 %41
}

declare dso_local i32 @usb_control_msg(%struct.usb_device*, i32, i32, i32, i32, i32, i64*, i32, i32) #1

declare dso_local i32 @usb_rcvctrlpipe(%struct.usb_device*, i32) #1

declare dso_local i32 @DBG(i32, i8*, i32, i32) #1

declare dso_local i32 @PDBGG(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
